--- a/task 3/CMakeLists.txt
+++ b/task 3/CMakeLists.txt
@@ -1,8 +1,8 @@
 cmake_minimum_required(VERSION 3.20)
-project(task_3)
+project(prog2)
 
 set(CMAKE_CXX_STANDARD 14)
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++14 -lcurl")
 
-add_executable(task_3 prog2.cpp)
-target_link_libraries(task_3 curl)
+add_executable(prog2 prog2.cpp)
+target_link_libraries(prog2 PRIVATE curl)
